<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Sukey Cascade</string>

	<string name="title_cascade_settings">Edit Cascade Messaging Settings</string>

	<string name="pref_enabled">Enabled</string>
	<string name="prefsumm_enabled_yes">Alerts will be forwarded by text</string>
	<string name="prefsumm_enabled_no">No texts will be sent</string>
	<string name="prefgrp_buddy_list">Buddy List</string>
	<string name="pref_buddy_list">Buddy list</string>
	<string name="prefsumm_buddy_list">Alerts will be texted to these people</string>
	<string name="prefgrp_text_restrictions">Text Restrictions</string>
	<string name="pref_restrict_day">Restrict by day</string>
	<string name="pref_max_per_day">Max per day</string>
	<string name="prefsumm_max_per_day">Limit number of texts sent each day</string>
	<string name="prefgrp_notifications">Notifications</string>
	<string name="pref_confirm_each">Confirm each text</string>
	<string name="prefsumm_confirm_each">Ask before sending each broadcast</string>

	<string name="notification_cascading_message">Cascading message to buddy %1$d of %2$d...</string>
	<string name="select_contacts_title">Select buddies...</string>
</resources>
